修改配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
 #V3专网数据库信息
-spring.datasource.druid.username=admin_ali
-spring.datasource.druid.password=Al123456
-spring.datasource.druid.url=jdbc:mysql://33.82.4.136:3306/city_brain
+spring.datasource.druid.username=xxx
+spring.datasource.druid.password=xxx
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/city_brain
 #V2专网数据库信息
 #spring.datasource.druid.username=aliyuntest
 #spring.datasource.druid.password=Admin123
