扫描注解流程

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=8081
-spring.datasource.druid.username=xxx
-spring.datasource.druid.password=xxx
+spring.datasource.druid.username=root
+spring.datasource.druid.password=chenqiang
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/city_brain
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+
+
+
+
+mybatis.config-location=classpath:myBatis-config.xml
+mybatis.mapper-locations=classpath:com/tinnkyou/mapper/*Mapper.xml
+mybatis.type-aliases-package=com.tinnkyou.bean
+#logging.config=classpath:logback-spring.xml
+logging.level.com.tinnkyou.mapper=debug
