--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
             <!--<groupId>org.apache.httpcomponents</groupId>-->
             <!--<artifactId>httpcore</artifactId>-->
         <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>redis.clients</groupId>-->
-            <!--<artifactId>jedis</artifactId>-->
-            <!--<version></version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
