--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.datasource.druid.username=root
 spring.datasource.druid.password=chenqiang
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/city_brain
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 
 
