--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 server.port=8081
 spring.datasource.druid.username=root
 spring.datasource.druid.password=chenqiang
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/demo?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+
+#Redis
+spring.redis.host=127.0.0.1
+spring.redis.password=123456
+spring.redis.port=6379
+spring.redis.timeout=2000
+spring.redis.database=0
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
 
 
 
